--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -164,6 +164,52 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "(gdb) fda_get_stress",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/bin/gmx_fda",
+            "args": ["fda_get_stress",
+                     "-i", "fda.pfr",
+                     "-o", "pull.psr"],
+            "stopAtEntry": false,
+            "cwd": "/home/bernd/hits/MBM-FDA-8/issue-tangtong/punctual_stress_average/pfr_and_psr",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) fda punctual stress average",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/bin/gmx_fda",
+            "args": ["mdrun",
+                     "-deffnm", "rerun",
+                     "-s", "topol.tpr",
+                     "-rerun", "traj.trr",
+                     "-nt", "1",
+                     "-pfn", "index.ndx",
+                     "-pfi", "fda.pfi"],
+            "stopAtEntry": false,
+            "cwd": "/home/bernd/hits/MBM-FDA-8/punctual_stress_average",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
