--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,7 @@
         "GMX_DEFAULT_SUFFIX": "OFF",
         "GMX_BINARY_SUFFIX": "_fda",
         "GMX_SIMD": "NONE",
-        "GMX_BUILD_UNITTESTS": "ON",
-        "BOOST_ROOT": "~/.conan/data/boost/1.72.0/_/_/package/f419497daccab81a781a793e5fffd7f228cf234e",
-        "CMAKE_INSTALL_PREFIX": "/home/bernd/install/gromacs-fda"
+        "GMX_BUILD_UNITTESTS": "ON"
     },
     "cmake.generator": "Unix Makefiles",
     "clang-format.executable": "/usr/bin/clang-format-7",
@@ -82,6 +80,12 @@
         "valarray": "cpp",
         "*.cuh": "cpp",
         "codecvt": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     }
 }
