test fda graph residue based

--- a/src/gromacs/gmxana/fda/tests/CMakeLists.txt
+++ b/src/gromacs/gmxana/fda/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ gmx_add_gtest_executable(
     FDAGraphTest.cpp
     FDAShortestPathTest.cpp
     FDAViewStressTest.cpp
+    GraphTest.cpp
     PDBTest.cpp
 )
 
