debug launch for shortest path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -233,6 +233,36 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "(gdb) giulia-20221115",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/bin/gmx_fda",
+            "args": ["fda_shortest_path",
+                     "-i", "/data/giulia-20221115/output_onlySc.pfr",
+                     "-s", "/data/giulia-20221115/md.tpr",
+                     "-n", "/data/giulia-20221115/index.ndx",
+                     "-f", "/data/giulia-20221115/TRAJ1us-strip.xtc",
+                     "-o", "result.pdb",
+                     "-frame", "average 100000",
+                     "-source", "3379",
+                     "-dest", "3374",
+                     "-nk", "1",
+                     "-pymol",
+                     "-convert"],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
