--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,9 +16,8 @@
 		"vscode": {
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
-				"ms-vscode.cpptools",
-				"ms-vscode.cmake-tools",
-				"DavidSchuldenfrei.gtest-adapter"
+				"DavidSchuldenfrei.gtest-adapter",
+                "ms-vscode.cpptools-extension-pack"
 			]
 		}
 	},
